src/FortranToCParser.java
// Generated from FortranToC.g4 by ANTLR 4.8
import model.Constante;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FortranToCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, IDENT=51, NUM_INT_CONST_B=52, 
		NUM_INT_CONST_O=53, NUM_INT_CONST_H=54, NUM_INT_CONST=55, NUM_REAL_CONST=56, 
		STRING_CONST=57, LINE_COMMENT=58, WS=59;
	public static final int
		RULE_prg = 0, RULE_prgmal = 1, RULE_dcllist = 2, RULE_cabecera = 3, RULE_cabeceramal = 4, 
		RULE_cablist = 5, RULE_decsubprog = 6, RULE_sentlist = 7, RULE_dcl = 8, 
		RULE_dcl2 = 9, RULE_defcte = 10, RULE_defvar = 11, RULE_ctelist = 12, 
		RULE_simpvalue = 13, RULE_tipo = 14, RULE_charlength = 15, RULE_varlist = 16, 
		RULE_varlist2 = 17, RULE_init = 18, RULE_decproc = 19, RULE_formal_paramlist = 20, 
		RULE_nomparamlist = 21, RULE_nomparamlist2 = 22, RULE_dec_s_paramlist = 23, 
		RULE_tipoparam = 24, RULE_decfun = 25, RULE_dec_f_paramlist = 26, RULE_sent = 27, 
		RULE_sent2 = 28, RULE_sent3 = 29, RULE_sent4 = 30, RULE_doval = 31, RULE_casos = 32, 
		RULE_casos2 = 33, RULE_etiquetas = 34, RULE_etiquetas2 = 35, RULE_etiquetas3 = 36, 
		RULE_listaetiquetas = 37, RULE_exp = 38, RULE_expAux = 39, RULE_op = 40, 
		RULE_oparit = 41, RULE_expcond = 42, RULE_oplog = 43, RULE_factorcond = 44, 
		RULE_opcomp = 45, RULE_factor = 46, RULE_factor2 = 47, RULE_explist = 48, 
		RULE_proc_call = 49, RULE_subpparamlist = 50, RULE_subproglist = 51, RULE_codproc = 52, 
		RULE_codfun = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"prg", "prgmal", "dcllist", "cabecera", "cabeceramal", "cablist", "decsubprog", 
			"sentlist", "dcl", "dcl2", "defcte", "defvar", "ctelist", "simpvalue", 
			"tipo", "charlength", "varlist", "varlist2", "init", "decproc", "formal_paramlist", 
			"nomparamlist", "nomparamlist2", "dec_s_paramlist", "tipoparam", "decfun", 
			"dec_f_paramlist", "sent", "sent2", "sent3", "sent4", "doval", "casos", 
			"casos2", "etiquetas", "etiquetas2", "etiquetas3", "listaetiquetas", 
			"exp", "expAux", "op", "oparit", "expcond", "oplog", "factorcond", "opcomp", 
			"factor", "factor2", "explist", "proc_call", "subpparamlist", "subproglist", 
			"codproc", "codfun"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAM'", "';'", "'END'", "'program'", "'INTERFACE'", "'interface'", 
			"','", "'PARAMETER'", "'::'", "'='", "'INTEGER'", "'REAL'", "'CHARACTER'", 
			"'('", "')'", "'SUBROUTINE'", "'INTENT'", "'IN'", "'OUT'", "'INOUT'", 
			"'FUNCTION'", "'IF'", "'DO'", "'SELECT'", "'CASE'", "'THEN'", "'ENDIF'", 
			"'ELSE'", "'WHILE'", "'ENDDO'", "'DEFAULT'", "':'", "'+'", "'-'", "'*'", 
			"'/'", "'.OR.'", "'.AND.'", "'.EQV.'", "'.NEQV.'", "'.NOT.'", "'.TRUE.'", 
			"'.FALSE.'", "'<'", "'>'", "'<='", "'>='", "'=='", "'/='", "'CALL'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "IDENT", "NUM_INT_CONST_B", "NUM_INT_CONST_O", "NUM_INT_CONST_H", 
			"NUM_INT_CONST", "NUM_REAL_CONST", "STRING_CONST", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FortranToC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		ArrayList<Constante> constantes = new ArrayList<>();

	public FortranToCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrgContext extends ParserRuleContext {
		public PrgmalContext prgmal() {
			return getRuleContext(PrgmalContext.class,0);
		}
		public List<TerminalNode> IDENT() { return getTokens(FortranToCParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(FortranToCParser.IDENT, i);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public CabeceraContext cabecera() {
			return getRuleContext(CabeceraContext.class,0);
		}
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public SubproglistContext subproglist() {
			return getRuleContext(SubproglistContext.class,0);
		}
		public PrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterPrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitPrg(this);
		}
	}

	public final PrgContext prg() throws RecognitionException {
		PrgContext _localctx = new PrgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prg);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				prgmal();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(T__0);
				setState(110);
				match(IDENT);
				setState(111);
				match(T__1);
				setState(112);
				dcllist();
				constantes.forEach(cte -> {System.out.println(cte.constante);});
				setState(114);
				cabecera();
				setState(115);
				sent();
				setState(116);
				sentlist();
				setState(117);
				match(T__2);
				setState(118);
				match(T__0);
				setState(119);
				match(IDENT);
				setState(120);
				subproglist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrgmalContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(FortranToCParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(FortranToCParser.IDENT, i);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public CabeceraContext cabecera() {
			return getRuleContext(CabeceraContext.class,0);
		}
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public SubproglistContext subproglist() {
			return getRuleContext(SubproglistContext.class,0);
		}
		public PrgmalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prgmal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterPrgmal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitPrgmal(this);
		}
	}

	public final PrgmalContext prgmal() throws RecognitionException {
		PrgmalContext _localctx = new PrgmalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prgmal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__3);
			setState(125);
			match(IDENT);
			setState(126);
			match(T__1);
			setState(127);
			dcllist();
			setState(128);
			cabecera();
			setState(129);
			sent();
			setState(130);
			sentlist();
			setState(131);
			match(T__2);
			setState(132);
			match(T__3);
			setState(133);
			match(IDENT);
			setState(134);
			subproglist();
			System.err.println("PROGRAM debe ir con mayusculas");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DcllistContext extends ParserRuleContext {
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitDcllist(this);
		}
	}

	public final DcllistContext dcllist() throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dcllist);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				dcl();
				setState(138);
				dcllist();
				}
				break;
			case T__4:
			case T__5:
			case T__21:
			case T__22:
			case T__23:
			case T__49:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabeceraContext extends ParserRuleContext {
		public CabeceramalContext cabeceramal() {
			return getRuleContext(CabeceramalContext.class,0);
		}
		public CablistContext cablist() {
			return getRuleContext(CablistContext.class,0);
		}
		public CabeceraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecera; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterCabecera(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitCabecera(this);
		}
	}

	public final CabeceraContext cabecera() throws RecognitionException {
		CabeceraContext _localctx = new CabeceraContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cabecera);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				cabeceramal();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				match(T__4);
				setState(145);
				cablist();
				setState(146);
				match(T__2);
				setState(147);
				match(T__4);
				}
				break;
			case T__21:
			case T__22:
			case T__23:
			case T__49:
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabeceramalContext extends ParserRuleContext {
		public CablistContext cablist() {
			return getRuleContext(CablistContext.class,0);
		}
		public CabeceramalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabeceramal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterCabeceramal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitCabeceramal(this);
		}
	}

	public final CabeceramalContext cabeceramal() throws RecognitionException {
		CabeceramalContext _localctx = new CabeceramalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cabeceramal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__5);
			setState(153);
			cablist();
			setState(154);
			match(T__2);
			setState(155);
			match(T__5);
			System.err.println("INTERFACE debe ir con mayusculas");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CablistContext extends ParserRuleContext {
		public DecprocContext decproc() {
			return getRuleContext(DecprocContext.class,0);
		}
		public DecsubprogContext decsubprog() {
			return getRuleContext(DecsubprogContext.class,0);
		}
		public DecfunContext decfun() {
			return getRuleContext(DecfunContext.class,0);
		}
		public CablistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cablist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterCablist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitCablist(this);
		}
	}

	public final CablistContext cablist() throws RecognitionException {
		CablistContext _localctx = new CablistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cablist);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				decproc();
				setState(159);
				decsubprog();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				decfun();
				setState(162);
				decsubprog();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecsubprogContext extends ParserRuleContext {
		public DecprocContext decproc() {
			return getRuleContext(DecprocContext.class,0);
		}
		public DecsubprogContext decsubprog() {
			return getRuleContext(DecsubprogContext.class,0);
		}
		public DecfunContext decfun() {
			return getRuleContext(DecfunContext.class,0);
		}
		public DecsubprogContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decsubprog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterDecsubprog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitDecsubprog(this);
		}
	}

	public final DecsubprogContext decsubprog() throws RecognitionException {
		DecsubprogContext _localctx = new DecsubprogContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decsubprog);
		try {
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				decproc();
				setState(167);
				decsubprog();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				decfun();
				setState(170);
				decsubprog();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentlistContext extends ParserRuleContext {
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public SentlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterSentlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitSentlist(this);
		}
	}

	public final SentlistContext sentlist() throws RecognitionException {
		SentlistContext _localctx = new SentlistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sentlist);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				sent();
				setState(176);
				sentlist();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Dcl2Context dcl2() {
			return getRuleContext(Dcl2Context.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitDcl(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			tipo();
			setState(182);
			dcl2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dcl2Context extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(FortranToCParser.IDENT, 0); }
		public SimpvalueContext simpvalue() {
			return getRuleContext(SimpvalueContext.class,0);
		}
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public DefcteContext defcte() {
			return getRuleContext(DefcteContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public DefvarContext defvar() {
			return getRuleContext(DefvarContext.class,0);
		}
		public Dcl2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterDcl2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitDcl2(this);
		}
	}

	public final Dcl2Context dcl2() throws RecognitionException {
		Dcl2Context _localctx = new Dcl2Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_dcl2);
		try {
			setState(203);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				Constante cte = new Constante();
				setState(185);
				match(T__6);
				setState(186);
				match(T__7);
				setState(187);
				match(T__8);
				cte.setName(getCurrentToken().getText());
				setState(189);
				match(IDENT);
				setState(190);
				match(T__9);
				cte.setValue(getCurrentToken().getText());
				setState(192);
				simpvalue();
				constantes.add(cte);
				setState(194);
				ctelist();
				setState(195);
				match(T__1);
				setState(196);
				defcte();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(198);
				match(T__8);
				setState(199);
				varlist();
				setState(200);
				match(T__1);
				setState(201);
				defvar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefcteContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(FortranToCParser.IDENT, 0); }
		public SimpvalueContext simpvalue() {
			return getRuleContext(SimpvalueContext.class,0);
		}
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public DefcteContext defcte() {
			return getRuleContext(DefcteContext.class,0);
		}
		public DefcteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defcte; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).enterDefcte(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortranToCListener ) ((FortranToCListener)listener).exitDefcte(this);
		}
	}

	public final DefcteContext defcte() throws RecognitionException {
		DefcteContext _localctx = new DefcteContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_defcte);
		try {
			setState(221);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				Constante cte = new Constante();
				setState(206);
				tipo();
				setState(207);
				match(T__6);
				setState(208);
				match(T__7);
				setState(209);
				match(T__8);
				cte.setName(getCurrentToken().getText());
				setState(211);
				match(IDENT);
				setState(212);
				match(T__9);
				cte.setValue(getCurrentToken().getText());
				setState(214);
				simpvalue();
				constantes.add(cte);
				setState(216);
				ctelist();
				setState(217);
				match(T__1);
				setState(218);
